# CMake configuration.
CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
CMAKE_POLICY(SET CMP0083 NEW)   # Manage PIE/PIC link settings.

# Basic project setup.
SET(PHANTOM_PROJECT "phantom_project")
SET(PHANTOM_BINARY "phantom")
SET(CMAKE_C_STANDARD 23)
SET(PHANTOM_MAJOR_VERSION "0" CACHE STRING "Major version of this Phantom build")
SET(PHANTOM_MINOR_VERSION "0" CACHE STRING "Minor version of this Phantom build")
SET(PHANTOM_PATCH_VERSION "0" CACHE STRING "Patch version of this Phantom build")
SET(PHANTOM_VERSION "${PHANTOM_MAJOR_VERSION}.${PHANTOM_MINOR_VERSION}.${PHANTOM_PATCH_VERSION}")
SET(PHANTOM_DESCRIPTION "Loader and Runtime Dynamic Linker (RTDL)")
SET(PHANTOM_HOMEPAGE "https://github.com/patha454/phantom")
PROJECT(
    ${PHANTOM_PROJECT}
    LANGUAGES C ASM
    VERSION ${PHANTOM_VERSION}
    DESCRIPTION ${PHANTOM_DESCRIPTION}
    HOMEPAGE_URL ${PHANTOM_HOMEPAGE}
)

# Report on target configuration.
MESSAGE(STATUS "Target CPU: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(STATUS "Target OS: ${CMAKE_SYSTEM_NAME}")

ADD_EXECUTABLE(${PHANTOM_BINARY} library.c linux_x64.s)
# TARGET_LINK_OPTIONS(${PHANTOM_BINARY} PRIVATE LINKER:-e start)
